fixed scrollbar... again

--- a/portfolio/src/app.css
+++ b/portfolio/src/app.css
@@ -23,28 +23,6 @@
     background: #555;
   } 
 
-.styled-scrollbar{
-    scrollbar-color: white transparent;
-}
-
-/* Track */
-.styled-scrollbar::-webkit-scrollbar-track {
-  background: #ff0000;
-}
-
-/* Handle */
-.styled-scrollbar::-webkit-scrollbar-thumb {
-  background: #ff0000;
-}
-
-/* Handle on hover */
-.styled-scrollbar::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
-.styled-scrollbar {
-  scrollbar-color: white transparent;
-}
 
 body {
   overflow-x: hidden;
